fix product page gap between icons Imported from Changeset 2849

--- a/WarehouseEcommerce/Content/Theme/University/app/css/Site.css
+++ b/WarehouseEcommerce/Content/Theme/University/app/css/Site.css
@@ -3941,3 +3941,8 @@ body {
 .list-on-tablets .badge {
     z-index: 1;
 }
+.list-on-tablets .icolist {
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+}
